version/0.18/_sources/api/solver/_autosummary/settings/list.rst.txt
:orphan:

.. _list:

list
====

.. autoclass:: ansys.fluent.core.solver.settings_232.list.list
    :show-inheritance:

.. rubric:: Included in:

==============================================================================   ========================================================

Parent                                                                                                                            Summary

==============================================================================   ========================================================
:ref:`turb_visc_func_mf <turb_visc_func_mf>`                                                                   'turb_visc_func_mf' child.

:ref:`multiband <multiband>`                                                                                Enter multi-band information.

:ref:`phase_material <phase_material>`                                                                            'phase_material' child.

:ref:`multi_component_diffusion_mf <multi_component_diffusion_mf>`                                  'multi_component_diffusion_mf' child.

:ref:`injections <injections>`                                                                                        'injections' child.

:ref:`rotor <rotor>`                                                                                    Main menu to define a rotor disk:

:ref:`geometry <geometry_1>`                                                                          Main menu to define a disk-section:

:ref:`beams <beams>`                                                                                        Enter the optical beams menu.

:ref:`fluid <fluid>`                                                                                                       'fluid' child.

:ref:`uds_diffusivities <uds_diffusivities>`                                                                   'uds_diffusivities' child.

:ref:`solid <solid>`                                                                                                       'solid' child.

:ref:`mixture <mixture>`                                                                                                 'mixture' child.

:ref:`species_diffusivity <species_diffusivity>`                                                             'species_diffusivity' child.

:ref:`multicomponent <multicomponent>`                                                                            'multicomponent' child.

:ref:`multicomponent_child <multicomponent_child>`                                                 'child_object_type' of multicomponent.

:ref:`volumetric_species <volumetric_species>`                                                                'volumetric_species' child.

:ref:`cross_section_multicomponent <cross_section_multicomponent>`                                  'cross_section_multicomponent' child.

:ref:`cross_section_multicomponent_child <cross_section_multicomponent_child>`       'child_object_type' of cross_section_multicomponent.

:ref:`inert_particle <inert_particle>`                                                                            'inert_particle' child.

:ref:`droplet_particle <droplet_particle>`                                                                      'droplet_particle' child.

:ref:`combusting_particle <combusting_particle>`                                                             'combusting_particle' child.

:ref:`particle_mixture <particle_mixture>`                                                                      'particle_mixture' child.

:ref:`particle_species <particle_species>`                                                                      'particle_species' child.

:ref:`fluid <fluid_1>`                                                                                                     'fluid' child.

:ref:`phase <phase>`                                                                                                       'phase' child.

:ref:`source_terms <source_terms_1>`                                                                                'source_terms' child.

:ref:`fixes <fixes>`                                                                                                       'fixes' child.

:ref:`solid <solid_1>`                                                                                                     'solid' child.

:ref:`phase <phase_1>`                                                                                                     'phase' child.

:ref:`axis <axis>`                                                                                                          'axis' child.

:ref:`phase <phase_2>`                                                                                                     'phase' child.

:ref:`degassing <degassing>`                                                                                           'degassing' child.

:ref:`exhaust_fan <exhaust_fan>`                                                                                     'exhaust_fan' child.

:ref:`phase <phase_3>`                                                                                                     'phase' child.

:ref:`band_q_irrad <band_q_irrad>`                                                                                  'band_q_irrad' child.

:ref:`band_q_irrad_diffuse <band_q_irrad_diffuse>`                                                          'band_q_irrad_diffuse' child.

:ref:`mf <mf>`                                                                                                                'mf' child.

:ref:`tss_scalar <tss_scalar>`                                                                                        'tss_scalar' child.

:ref:`uds_bc <uds_bc>`                                                                                                    'uds_bc' child.

:ref:`uds <uds>`                                                                                                             'uds' child.

:ref:`pb_disc_bc <pb_disc_bc>`                                                                                        'pb_disc_bc' child.

:ref:`pb_disc <pb_disc>`                                                                                                 'pb_disc' child.

:ref:`pb_qmom_bc <pb_qmom_bc>`                                                                                        'pb_qmom_bc' child.

:ref:`pb_qmom <pb_qmom>`                                                                                                 'pb_qmom' child.

:ref:`pb_qbmm_bc <pb_qbmm_bc>`                                                                                        'pb_qbmm_bc' child.

:ref:`pb_qbmm <pb_qbmm>`                                                                                                 'pb_qbmm' child.

:ref:`pb_smm_bc <pb_smm_bc>`                                                                                           'pb_smm_bc' child.

:ref:`pb_smm <pb_smm>`                                                                                                    'pb_smm' child.

:ref:`pb_dqmom_bc <pb_dqmom_bc>`                                                                                     'pb_dqmom_bc' child.

:ref:`pb_dqmom <pb_dqmom>`                                                                                              'pb_dqmom' child.

:ref:`fan <fan>`                                                                                                             'fan' child.

:ref:`phase <phase_4>`                                                                                                     'phase' child.

:ref:`geometry <geometry_2>`                                                                                            'geometry' child.

:ref:`inlet_vent <inlet_vent>`                                                                                        'inlet_vent' child.

:ref:`phase <phase_5>`                                                                                                     'phase' child.

:ref:`intake_fan <intake_fan>`                                                                                        'intake_fan' child.

:ref:`phase <phase_6>`                                                                                                     'phase' child.

:ref:`interface <interface>`                                                                                           'interface' child.

:ref:`phase <phase_7>`                                                                                                     'phase' child.

:ref:`interior <interior>`                                                                                              'interior' child.

:ref:`phase <phase_8>`                                                                                                     'phase' child.

:ref:`mass_flow_inlet <mass_flow_inlet>`                                                                         'mass_flow_inlet' child.

:ref:`phase <phase_9>`                                                                                                     'phase' child.

:ref:`mass_flow_outlet <mass_flow_outlet>`                                                                      'mass_flow_outlet' child.

:ref:`network <network>`                                                                                                 'network' child.

:ref:`phase <phase_10>`                                                                                                    'phase' child.

:ref:`network_end <network_end>`                                                                                     'network_end' child.

:ref:`phase <phase_11>`                                                                                                    'phase' child.

:ref:`outflow <outflow>`                                                                                                 'outflow' child.

:ref:`phase <phase_12>`                                                                                                    'phase' child.

:ref:`outlet_vent <outlet_vent>`                                                                                     'outlet_vent' child.

:ref:`phase <phase_13>`                                                                                                    'phase' child.

:ref:`overset <overset>`                                                                                                 'overset' child.

:ref:`periodic <periodic>`                                                                                              'periodic' child.

:ref:`phase <phase_14>`                                                                                                    'phase' child.

:ref:`porous_jump <porous_jump>`                                                                                     'porous_jump' child.

:ref:`phase <phase_15>`                                                                                                    'phase' child.

:ref:`adhesion_angle <adhesion_angle>`                                                                            'adhesion_angle' child.

:ref:`pressure_far_field <pressure_far_field>`                                                                'pressure_far_field' child.

:ref:`phase <phase_16>`                                                                                                    'phase' child.

:ref:`pressure_inlet <pressure_inlet>`                                                                            'pressure_inlet' child.

:ref:`phase <phase_17>`                                                                                                    'phase' child.

:ref:`pressure_outlet <pressure_outlet>`                                                                         'pressure_outlet' child.

:ref:`phase <phase_18>`                                                                                                    'phase' child.

:ref:`radiator <radiator>`                                                                                              'radiator' child.

:ref:`phase <phase_19>`                                                                                                    'phase' child.

:ref:`rans_les_interface <rans_les_interface>`                                                                'rans_les_interface' child.

:ref:`phase <phase_20>`                                                                                                    'phase' child.

:ref:`recirculation_inlet <recirculation_inlet>`                                                             'recirculation_inlet' child.

:ref:`phase <phase_21>`                                                                                                    'phase' child.

:ref:`mass_flow_multiplier <mass_flow_multiplier>`                                                          'mass_flow_multiplier' child.

:ref:`recirculation_outlet <recirculation_outlet>`                                                          'recirculation_outlet' child.

:ref:`phase <phase_22>`                                                                                                    'phase' child.

:ref:`shadow <shadow>`                                                                                                    'shadow' child.

:ref:`symmetry <symmetry>`                                                                                              'symmetry' child.

:ref:`velocity_inlet <velocity_inlet>`                                                                            'velocity_inlet' child.

:ref:`phase <phase_23>`                                                                                                    'phase' child.

:ref:`wall <wall>`                                                                                                          'wall' child.

:ref:`phase <phase_24>`                                                                                                    'phase' child.

:ref:`band_in_emiss <band_in_emiss>`                                                                               'band_in_emiss' child.

:ref:`band_diffuse_frac <band_diffuse_frac>`                                                                   'band_diffuse_frac' child.

:ref:`species_spec <species_spec>`                                                                                  'species_spec' child.

:ref:`ablation_species_mf <ablation_species_mf>`                                                             'ablation_species_mf' child.

:ref:`named_expressions <named_expressions>`                                                                   'named_expressions' child.

:ref:`interface <interface_1>`                                                                                         'interface' child.

:ref:`turbo_interface <turbo_interface>`                                                                         'turbo_interface' child.

:ref:`parts <parts>`                                                                                                       'parts' child.

:ref:`bodies <bodies>`                                                                                                    'bodies' child.

:ref:`faces <faces>`                                                                                                       'faces' child.

:ref:`groups <groups>`                                                                                                    'groups' child.

:ref:`volumes <volumes>`                                                                                                 'volumes' child.

:ref:`boundaries <boundaries>`                                                                                        'boundaries' child.

:ref:`interfaces <interfaces>`                                                                                        'interfaces' child.

:ref:`reference_frames <reference_frames>`                                                                      'reference_frames' child.

:ref:`discretization_scheme <discretization_scheme>`                                                       'discretization_scheme' child.

:ref:`set_velocity_and_vof_cutoffs <set_velocity_and_vof_cutoffs>`                                  'set_velocity_and_vof_cutoffs' child.

:ref:`set_damping_strengths <set_damping_strengths>`                                                       'set_damping_strengths' child.

:ref:`phase_based_vof_discretization <phase_based_vof_discretization>`                            'phase_based_vof_discretization' child.

:ref:`relaxation_factor <relaxation_factor_1>`                                                                 'relaxation_factor' child.

:ref:`under_relaxation <under_relaxation_1>`                                                                 Enter Under Relaxation Menu.

:ref:`local_dt_dualts_relax <local_dt_dualts_relax>`                                                       'local_dt_dualts_relax' child.

:ref:`global_dt_pseudo_relax <global_dt_pseudo_relax>`                                                    'global_dt_pseudo_relax' child.

:ref:`equations <equations>`                                                                                           'equations' child.

:ref:`mg_controls <mg_controls>`                                                                                     'mg_controls' child.

:ref:`amg_gpgpu_options <amg_gpgpu_options>`                                                                   'amg_gpgpu_options' child.

:ref:`local_dt <local_dt>`                                                                                              'local_dt' child.

:ref:`global_dt <global_dt>`                                                                                           'global_dt' child.

:ref:`correction_tolerance <correction_tolerance>`                                                          'correction_tolerance' child.

:ref:`report_definitions <report_definitions>`                                                                'report_definitions' child.

:ref:`mesh <mesh_1>`                                                                                                        'mesh' child.

:ref:`surface <surface_1>`                                                                                               'surface' child.

:ref:`volume <volume>`                                                                                                    'volume' child.

:ref:`force <force>`                                                                                                       'force' child.

:ref:`lift <lift>`                                                                                                          'lift' child.

:ref:`drag <drag>`                                                                                                          'drag' child.

:ref:`moment <moment>`                                                                                                    'moment' child.

:ref:`flux <flux_1>`                                                                                                        'flux' child.

:ref:`injection <injection>`                                                                                           'injection' child.

:ref:`user_defined <user_defined_5>`                                                                                'user_defined' child.

:ref:`aeromechanics <aeromechanics>`                                                                               'aeromechanics' child.

:ref:`icing <icing>`                                                                                                       'icing' child.

:ref:`expression <expression_1>`                                                                                      'expression' child.

:ref:`single_val_expression <single_val_expression>`                                                       'single_val_expression' child.

:ref:`custom <custom>`                                                                                                    'custom' child.

:ref:`report_files <report_files>`                                                                                  'report_files' child.

:ref:`report_plots <report_plots>`                                                                                  'report_plots' child.

:ref:`convergence_reports <convergence_reports>`                                                             'convergence_reports' child.

:ref:`cell_registers <cell_registers>`                                                                            'cell_registers' child.

:ref:`defaults <defaults>`                                                                                              'defaults' child.

:ref:`species <species_3>`                                                                                               'species' child.

:ref:`species_child <species_child>`                                                                      'child_object_type' of species.

:ref:`solution_animations <solution_animations>`                                                             'solution_animations' child.

:ref:`extrapolate_eqn_vars <extrapolate_eqn_vars>`                                                          Enter the extrapolation menu.

:ref:`point_surface <point_surface>`                                                                               'point_surface' child.

:ref:`line_surface <line_surface>`                                                                                  'line_surface' child.

:ref:`rake_surface <rake_surface>`                                                                                  'rake_surface' child.

:ref:`iso_surface <iso_surface>`                                                                                     'iso_surface' child.

:ref:`plane_surface <plane_surface>`                                                                               'plane_surface' child.

:ref:`mesh <mesh_2>`                                                                                                        'mesh' child.

:ref:`contour <contour>`                                                                                                 'contour' child.

:ref:`vector <vector_1>`                                                                                                  'vector' child.

:ref:`pathline <pathline>`                                                                                              'pathline' child.

:ref:`particle_track <particle_track>`                                                                            'particle_track' child.

:ref:`lic <lic>`                                                                                                             'lic' child.

:ref:`olic <olic>`                                                                                                          'olic' child.

:ref:`display_states <display_states>`                                                                            'display_states' child.

:ref:`xy_plot <xy_plot>`                                                                                                 'xy_plot' child.

:ref:`scene <scene>`                                                                                                       'scene' child.

:ref:`graphics_objects <graphics_objects>`                                                                      'graphics_objects' child.

:ref:`parametric_studies <parametric_studies>`                                                                'parametric_studies' child.

:ref:`design_points <design_points_1>`                                                                             'design_points' child.

:ref:`input_parameters <input_parameters>`                                                        Input Parameter Values of Design Point.

:ref:`output_parameters <output_parameters>`                                                     Output Parameter Values of Design Point.

==============================================================================   ========================================================

